solving chevron stretched link issue

--- a/src/components/Home/HomePage.scss
+++ b/src/components/Home/HomePage.scss
@@ -166,4 +166,10 @@
     margin-bottom: 0;
     font-size: $font-size-rgl;
   }
+
+  .linkAbout,
+  .chevron,
+  .container {
+    display: none;
+  }
 }
